--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   gtag('config', 'G-M006E5C4QW');
 </script>
 
-    <title>Amrit Astrology</title>
+    <title>Amrit Astrology-Your Personal Astrologer</title>
 </head>
 <body>
 
