--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse mx-auto" id="navbarNav">
-    <ul class="navbar-nav">
+    <ul class="navbar-nav mx-auto">
       <li class="nav-item active">
         <a class="nav-link" href="#">Home</a>
       </li>
