--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
   <div class="collapse navbar-collapse mx-auto" id="navbarNav">
     <ul class="navbar-nav mx-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="#">Home</a>
+        <a class="nav-link" href="https://amritastrology.com.np">Home</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">Service</a>
